v0.3.10    Mon, 09 Nov 2015 19:23:07 +0900
  - Show order's pants in repair
  - 의류준비에 목둘레 추가
  - 수선에 대기자 현황판 추가
  - 수선에 대여목적을 표시
  - 의류준비 -> 수선/포장 일때 bestfit 입력유도
  - 의류준비에 바지길이 표시
  - 의류준비에서 바지길이를 버튼으로 수정
  - 의류준비에 바지길이 제거
  - 수선에서 바지길이를 수정 가능하도록 변경
  - 수선/포장으로 넘어갈때에 바지길이를 입력할 수 있도록 변경

v0.3.9    Mon, 19 Oct 2015 18:23:54 +0900
  - Add route 'GET /repair'
  - /repair 에서 10분마다 알람
  - Publish with extra data when sender is order

v0.3.8    Wed, 09 Sep 2015 17:44:07 +0900
  - #bestfit-alert .bestfit style 강조

v0.3.7    Tue, 08 Sep 2015 15:19:36 +0900
  - bestfit 입력할때 현재의 상태를 표시

v0.3.6    Fri Jul  3 12:44:44 2015 KST
  - Show today and a week bestfit count

v0.3.5    Fri Jun 26 12:20:28 2015 KST
  - 의류준비에서 수선으로 변경했을때 치수측정으로 상태가 바뀌는 버그 수정

v0.3.4    Tue Jun 23 01:41:25 2015 KST
  - Toggle bestfit by clicking user name in preparation
  - Show wearon date in preparation

v0.3.3    Thu Jun 18 09:07:57 2015 KST
  - Documentation routing info to each controller
  - Add 포장, 수선 context menu in preparation
  - 어울림 => Best-Fit 문자 수정

v0.3.2    Mon Jun  8 16:31:12 2015 KST
  - active 상태가 오락가락하는 버그 수정(https://github.com/opencloset/monitor/issues/15)
  - save cookie file after success authentication

v0.3.1    Fri Jun  5 13:40:42 2015 KST
  - Add style for context menu
  - 대여하려는 의류 카테고리의 순서를 정렬

v0.3.0    Thu Jun  4 18:02:20 2015 KST
  - 의류준비에 수선중인 사용자 목록을 표시
  - 의류카테고리를 정렬해서 나타냄
  - 수선, 포장으로 변경할때에 Bestfit 에 대한 입력을 요구

v0.2.6    Tue Jun  2 23:22:36 2015 KST
  - override contextmenu background-color

v0.2.5    Mon Jun  1 18:33:50 2015 KST
  - preparation 에서 대여자의 상태를 변경가능

v0.2.4    Fri May 29 12:33:11 2015 KST
  - change .active:hover css for mobile persist :hover state
  - `grunt` is no more needed

v0.2.3    Tue May 19 14:12:54 2015 KST
  - preparation route syncs active states between each connected devices

v0.2.2    Wed Apr  8 19:01:41 2015 KST
  - Add /preparation route

v0.2.1    Tue Mar 24 12:19:11 2015 KST
  - Configuration sqlite dsn
