@@ -1,3 +1,5 @@
+  - 수선화면에서 reload 를 줄이고 dashboard 를 실시간으로 update
+
 v0.3.10    Mon, 09 Nov 2015 19:23:07 +0900
   - Show order's pants in repair
   - 의류준비에 목둘레 추가
